# H.O.T-Jarvis

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  docs-plan.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: branch-cleanup.yml  ci.yml  deploy-docs-vercel.yml  deploy-landing.yml
brand/: README.md
docs/: DECISIONS.md  STATE.md
docs-site/: DEPLOY.md  astro.config.mjs  netlify.toml  package-lock.json  package.json  vercel.json
docs-site/public/: robots.txt  site.webmanifest
docs-site/src/components/: Footer.astro  Head.astro
docs/ios/: PrivacyInfo.xcprivacy  README.md
landing/: README.md  STORY.md  core.js  index.html  reveal.js  site.webmanifest  styles.css
landing/assets/: ASSETS.md
scripts/: generate-icons.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: authoring.rs  confidence.rs  eventlog.rs  memory.rs  mod.rs  reflection.rs  reliability.rs  replay.rs  router.rs  skills.rs  tools.rs
src/components/: ArcCore.tsx  CommandPalette.tsx  Sparkline.tsx  Waveform.tsx
src/lib/: commands.test.ts  commands.ts  confidence.test.ts  confidence.ts  events.test.ts  events.ts  format.test.ts  format.ts  ipc.ts  skills.test.ts  skills.ts  status.test.ts  status.ts  theme.test.ts  theme.ts  undo.test.ts  undo.ts  voice.test.ts  voice.ts
src/styles/: app.css  tokens.css
src/views/: EventsView.tsx  MemoryView.tsx  NotesView.tsx  SkillsView.tsx
(+24 files in other folders)
