[package]
name = "hot-jarvis"
version = "0.1.0"
description = "H.O.T-Jarvis — a local-first, genuinely-free personal AI assistant"
authors = ["Hotragn Pettugani"]
license = "Apache-2.0"
repository = "https://github.com/Hotragn/H.O.T-Jarvis"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hot_jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
